[package]
name = "serve"
authors = ["Serhiy Barhamon"]
description = "A simple tool to serve static files from a directory."
rust-version = "1.77.0"
repository = "https://github.com/Lurk/serve.git"
license = "MIT"
keywords = ["http", "server", "static", "tls"]
categories = ["web-programming::http-server"]
version = "0.2.6"
edition = "2021"


[dependencies]
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
  "serde",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "compression-full",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
