[package]
name = "serve"
authors = ["Serhiy Barhamon"]
description = "A simple tool to serve static files from a directory."
rust-version = "1.82.0"
repository = "https://github.com/Lurk/serve.git"
license = "MIT"
keywords = ["http", "server", "static", "tls"]
categories = ["web-programming::http-server"]
version = "0.2.6"
edition = "2021"


[dependencies]
axum = "0.8.7"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
  "serde",
] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
  "fs",
  "trace",
  "compression-full",
] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-log = "0.2.0"
tracing-appender = "0.2.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.9"
