[package]
name = "serve"
authors = ["Serhiy Barhamon"]
description = "A simple tool to serve static files from a directory."
rust-version = "1.85.0"
repository = "https://github.com/Lurk/serve.git"
license = "MIT"
keywords = ["http", "server", "static", "tls", "proxy"]
categories = ["web-programming::http-server"]
version = "0.4.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
  "serde",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
  "fs",
  "trace",
  "compression-full",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-log = "0.2.0"
tracing-appender = "0.2.4"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = [
  "client-legacy",
  "http1",
  "tokio",
] }
http-body-util = "0.1.3"
notify = "8.2.0"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = "1"
serde = { version = "1.0.228", features = ["derive"] }
tokio-tungstenite = "0.28"
toml = "1.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
result_large_err = "allow"
